next-updater has upgraded 1 dependency
Hi!

I have upgraded dependencies to the latest non-breaking versions

    nodewatch 0.3.1 -> 0.3.2

Truly yours, [next-updater](https://github.com/bahmutov/next-updater)

--- a/package.json
+++ b/package.json
@@ -8,26 +8,30 @@
     "url": "https://github.com/bahmutov/solid-code.git"
   },
   "keywords": [
-    "js", "javascript", "testing", "quality"
+    "js",
+    "javascript",
+    "testing",
+    "quality"
   ],
   "dependencies": {
-    "optimist": "*",
     "check-types": "*",
-    "colors": "*",
     "cli-table": "*",
-    "nodewatch": "*",
+    "colors": "*",
+    "glob": "latest",
     "gt": "latest",
     "js-complexity-viz": "latest",
-    "req-count": "latest",
+    "lodash": "latest",
+    "nodewatch": "0.3.2",
+    "optimist": "*",
     "optional-color-logger": "latest",
-    "nodewatch": "latest",
-    "glob": "latest",
-    "lodash": "latest"
+    "req-count": "latest"
   },
   "engines": {
     "node": ">= 0.8.0"
   },
   "license": "MIT",
   "preferGlobal": "true",
-  "bin": { "solid": "solid.js" }
+  "bin": {
+    "solid": "solid.js"
+  }
 }
